--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,25 @@
 # Stage 1: Development
 FROM node:20-alpine AS development
 
+# Install OpenSSL for Prisma
+RUN apk add --no-cache openssl
+
 WORKDIR /app
 
+# Copy workspace root package files
 COPY package*.json ./
+
+# Copy backend package files
+COPY backend/package*.json ./backend/
+
+# Install all dependencies using workspace
 RUN npm ci
 
-COPY . .
+# Copy backend source code
+COPY backend ./backend
 
+# Generate Prisma client
+WORKDIR /app/backend
 RUN npx prisma generate
 
 EXPOSE 3001
@@ -19,11 +31,20 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
+# Copy workspace root package files
 COPY package*.json ./
+
+# Copy backend package files
+COPY backend/package*.json ./backend/
+
+# Install all dependencies
 RUN npm ci
 
-COPY . .
+# Copy backend source code
+COPY backend ./backend
 
+# Generate Prisma client and build
+WORKDIR /app/backend
 RUN npx prisma generate
 RUN npm run build
 
@@ -32,12 +53,21 @@ FROM node:20-alpine AS production
 
 WORKDIR /app
 
+# Copy workspace root package files
 COPY package*.json ./
+
+# Copy backend package files
+COPY backend/package*.json ./backend/
+
+# Install production dependencies only
 RUN npm ci --only=production
 
-COPY --from=build /app/dist ./dist
+# Copy built files from build stage
+COPY --from=build /app/backend/dist ./backend/dist
 COPY --from=build /app/node_modules/.prisma ./node_modules/.prisma
-COPY --from=build /app/prisma ./prisma
+COPY --from=build /app/backend/prisma ./backend/prisma
+
+WORKDIR /app/backend
 
 EXPOSE 3001
 
