--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -45,8 +43,8 @@ services:
   # Backend API
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./backend/Dockerfile
       target: development
     container_name: adm-backend
     restart: unless-stopped
@@ -62,9 +60,8 @@ services:
       JWT_EXPIRATION: 1d
       CORS_ORIGIN: http://localhost:3000
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
       - /app/node_modules
-      - /app/dist
     depends_on:
       postgres:
         condition: service_healthy
@@ -72,13 +69,14 @@ services:
         condition: service_healthy
     networks:
       - adm-network
+    working_dir: /app/backend
     command: npm run start:dev
 
   # Frontend
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./frontend/Dockerfile
       target: development
     container_name: adm-frontend
     restart: unless-stopped
@@ -89,13 +87,13 @@ services:
       REACT_APP_API_URL: http://localhost:3001/api
       REACT_APP_WS_URL: ws://localhost:3001
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app/frontend
       - /app/node_modules
-      - /app/build
     depends_on:
       - backend
     networks:
       - adm-network
+    working_dir: /app/frontend
     command: npm run dev
 
   # Nginx Reverse Proxy (optional for production)
