--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ OAUTH_GITHUB_CLIENT_SECRET=
 NODE_ENV=development
 PORT=3001
 CORS_ORIGIN=http://localhost:3000
+API_BASE_URL=http://localhost:3001
 
 # Frontend
 REACT_APP_API_URL=http://localhost:3001/api
